--- a/public/users-manage.html
+++ b/public/users-manage.html
@@ -249,7 +249,7 @@
                 <th>الحالة</th>
                 <th>آخر إجراء</th>       <!-- ✅ جديد -->
                 <th>آخر دخول</th>        <!-- ✅ جديد -->
-                <th>الإنشاء/التحديث</th>
+                <th>الإنشاء</th>
                 <th>إجراءات</th>
               </tr>
             </thead>
