--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -45,6 +45,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
     </div>
 
     <div class="row g-4">
+      <!-- إدخال تقييم لجنة (user/admin) -->
       <div class="col-12 col-sm-6 col-lg-4">
         <a href="/add_evaluation.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-primary"><i class="bi bi-journal-plus"></i></div>
@@ -53,6 +54,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         </a>
       </div>
 
+      <!-- إدارة تقييم اللجان (user يرى الرابط المطلوب + admin بالطبع) -->
       <div class="col-12 col-sm-6 col-lg-4" data-admin="true">
         <a href="https://vdash-qkyv.onrender.com/manage_committees.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-success"><i class="bi bi-gear"></i></div>
@@ -61,6 +63,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         </a>
       </div>
 
+      <!-- إدارة أسماء اللجان (admin-only) -->
       <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/committees-names-manage.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-info"><i class="bi bi-list-check"></i></div>
@@ -69,6 +72,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         </a>
       </div>
 
+      <!-- إدارة الكليات (admin-only) -->
       <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/manage_colleges.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-warning"><i class="bi bi-building"></i></div>
@@ -77,6 +81,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         </a>
       </div>
 
+      <!-- إدارة المدققين (admin-only) -->
       <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/manage_auditors.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-danger"><i class="bi bi-person-badge"></i></div>
@@ -85,6 +90,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         </a>
       </div>
 
+      <!-- إدارة المستخدمين (admin-only) -->
       <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/users-manage.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-dark"><i class="bi bi-people-fill"></i></div>
@@ -93,6 +99,16 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         </a>
       </div>
 
+      <!-- ✅ سجل العمليات (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
+        <a href="/audit-logs.html" class="card-link p-4 bg-white d-block h-100">
+          <div class="icon text-secondary"><i class="bi bi-clipboard-data"></i></div>
+          <h5 class="mt-3">سجل العمليات</h5>
+          <p class="mb-0 text-muted">من أجرى الإضافة/التعديل/الحذف</p>
+        </a>
+      </div>
+
+      <!-- عرض التقييمات (عام) -->
       <div class="col-12 col-sm-6 col-lg-4">
         <a href="/evaluations_dashboard.html" class="card-link p-4 bg-white d-block h-100" target="_blank">
           <div class="icon text-secondary"><i class="bi bi-bar-chart-line"></i></div>
@@ -103,6 +119,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
     </div>
   </div>
 
+  <!-- Toasts -->
   <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3" style="z-index:2000">
     <div id="toastSuccess" class="toast align-items-center text-bg-success border-0 mb-2" role="alert">
       <div class="d-flex">
@@ -145,6 +162,8 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
       const username = user?.username || (user?.email ? user.email.split('@')[0] : '—');
       document.getElementById('userUsername').textContent = username || '—';
       document.getElementById('userFullName').textContent = user?.name || '—';
+
+      // عرض "member" بدل "user" في الشارة فقط
       const roleRaw = (user?.role || '—').toLowerCase();
       const roleShown = roleRaw === 'user' ? 'member' : (user?.role || '—');
       document.getElementById('userRole').textContent = roleShown;
@@ -159,12 +178,14 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         });
       }
 
+      // admin يرى كل شيء (بما فيها سجل العمليات)
       if (roleRaw === 'admin') {
         document.querySelectorAll('.admin-only').forEach(el => el.classList.remove('admin-only'));
         cols.forEach(col => { col.style.display = ''; });
         return;
       }
 
+      // user يرى إدخال تقييم + العرض العام + إدارة تقييم اللجان (كما طلبت)
       if (roleRaw === 'user') {
         showBy(href =>
           /\/add_evaluation\.html\b/.test(href) ||
@@ -174,6 +195,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         return;
       }
 
+      // subuser-member يرى العرض العام فقط
       if (roleRaw === 'subuser-member') {
         showBy(href =>
           /\/evaluations_dashboard\.html\b/.test(href)
@@ -181,6 +203,7 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         return;
       }
 
+      // أي دور آخر غير معروف: العرض العام فقط
       showBy(href =>
         /\/evaluations_dashboard\.html\b/.test(href)
       );
