--- a/public/privacy.html
+++ b/public/privacy.html
@@ -4,105 +4,74 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>سياسة الخصوصية - نظام اللجان</title>
-  <meta name="description" content="سياسة الخصوصية لنظام اللجان: ما الذي نجمعه وكيف نستخدمه وكيفية إدارة الأذونات على Google.">
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.85;margin:0;background:#f7f7f8;color:#1f2328}
-    main{max-width:980px;margin:40px auto;padding:24px;background:#fff;border-radius:14px;border:1px solid #ececec}
-    h1,h2{margin-top:0}
-    h1{font-size:1.8rem}
-    h2{font-size:1.2rem;margin-top:1.5rem}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.8;margin:0;background:#f7f7f8;color:#222}
+    main{max-width:900px;margin:40px auto;padding:24px;background:#fff;border-radius:14px;border:1px solid #eee}
+    h1{margin-top:0}
     a{color:#0d6efd;text-decoration:none}
-    .muted{color:#6c757d}
-    ul{margin:0 0 0 1.2rem;padding:0}
-    li{margin:.25rem 0}
-    .box{background:#f8fafc;border:1px solid #e9ecef;border-radius:10px;padding:12px}
+    .muted{color:#555}
   </style>
 </head>
 <body>
   <main>
-    <h1>سياسة الخصوصية – نظام اللجان</h1>
-    <p class="muted">النطاق: <b>⟨example.com⟩</b> – آخر تحديث: <b>سبتمبر 2025</b></p>
+    <h1>سياسة الخصوصية - نظام اللجان</h1>
 
-    <h2>نظرة عامة</h2>
     <p>
-      يتيح “نظام اللجان” للمستخدمين حفظ روابط مستنداتهم المتعلقة باللجان (مثل قرارات التشكيل، خطط العمل، الدعوات، المحاضر…إلخ).
-      عند اختيار ملفات من Google Drive، تبقى الملفات في <b>حساب Google</b> الخاص بالمستخدم، ولا نقوم بنسخ محتوى الملفات إلى خوادمنا.
-      ما نخزّنه هو <b>بيانات وصفية وروابط فقط</b> (مثل: رابط الملف، عنوان اختياري، نوع المستند).
+      يتيح <b>نظام اللجان</b> للمستخدمين ربط حسابهم في <b>Google</b> لاختيار أو رفع ملفاتهم على Google Drive من خلال
+      <b>Google Picker API</b>. نحن لا ننسخ محتوى الملفات إلى خوادمنا؛
+      نقوم فقط بحفظ بيانات مرجعية بسيطة مثل <b>روابط المستندات</b> والعناوين النصية التي أدخلها المستخدم.
     </p>
 
     <h2>البيانات التي نجمعها</h2>
     <ul>
-      <li>بيانات الحساب داخل النظام: الاسم، البريد، الدور والصلاحيات.</li>
-      <li>روابط وبيانات وصفية للمستندات التي يختارها المستخدم من Google Drive (العنوان الاختياري/نوع المستند).</li>
-      <li>بيانات تشغيلية أساسية (مثل سجلات الأخطاء وعدد الطلبات) لتحسين الأداء والأمان.</li>
+      <li>بيانات جلسة المستخدم داخل النظام (الاسم، البريد، الدور) لأغراض التحكم في الصلاحيات داخل النظام.</li>
+      <li>روابط مستندات اللجان التي يختارها المستخدم من حسابه في Google Drive، والعناوين الاختيارية التي يضيفها.</li>
+      <li>لا نقوم بجمع محتوى الملفات ذاته، ولا نحلل محتوى المستندات المخزّنة في حساب Google Drive الخاص بالمستخدم.</li>
     </ul>
-
-    <h2>الأذونات (Scopes) والوصول إلى Google</h2>
-    <p>
-      للوصول إلى Google Drive عبر OAuth 2.0 نطلب الأذونات اللازمة فقط لتحديد الملفات التي يختارها المستخدم وإنشاء روابطها داخل النظام.
-      يمكن للمستخدم سحب الأذونات في أي وقت.
-    </p>
-    <div class="box">
-      <p class="muted">قد نستخدم – حسب الحاجة – الأذونات التالية (أمثلة):</p>
-      <ul>
-        <li><code>https://www.googleapis.com/auth/drive.file</code> – الوصول إلى الملفات التي أنشأها التطبيق أو التي يختارها المستخدم.</li>
-        <li><code>https://www.googleapis.com/auth/drive.readonly</code> أو استخدام Google Picker لقراءة البيانات الوصفية للملف المختار فقط.</li>
-      </ul>
-      <p class="muted">نلتزم بـ <a href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank" rel="noopener">Google API Services User Data Policy</a>.</p>
-    </div>
 
     <h2>كيفية استخدام البيانات</h2>
-    <ul>
-      <li>عرض روابط المستندات داخل النظام لأصحاب الصلاحية.</li>
-      <li>حفظ الحد الأدنى من البيانات اللازمة لعمل النظام (روابط + أوصاف).</li>
-      <li>تحسين الجودة ومعالجة المشكلات (بيانات تشغيلية غير مُعرِّفة للهوية قدر الإمكان).</li>
-    </ul>
-
-    <h2>مشاركة البيانات</h2>
     <p>
-      لا نبيع بياناتك. قد تتم مشاركة الحد الأدنى من البيانات مع مزودي خدمة الاستضافة أو التحليلات الضرورية لتشغيل النظام
-      (مثل: ⟨اسم المزوّد/Render/GitHub Pages⟩) وفقًا لاتفاقيات حماية البيانات لديهم. لا يتلقّى هؤلاء مزودي الخدمة <b>محتوى ملفات Google Drive</b>.
+      نستخدم الروابط والعناوين لعرض مستندات اللجان داخل النظام ومشاركتها مع المستخدمين المخوّلين فقط. لا نبيع البيانات ولا نشاركها لأغراض إعلانية.
+    </p>
+
+    <h2>الوصول إلى حساب Google واستخدام الصلاحيات (Scopes)</h2>
+    <p>
+      عند اختيار الملفات من خلال <b>Google Picker</b> قد يطلب النظام الحد الأدنى من الصلاحيات اللازمة مثل
+      <code>https://www.googleapis.com/auth/drive.file</code> للسماح بإنشاء/اختيار ملفات يملكها المستخدم أو أنشأها عبر التطبيق.
+      لا نطلب صلاحيات أوسع من الحاجة العملية. يمكنك مراجعة الصلاحيات والموافقة عليها عبر شاشة موافقة Google.
+    </p>
+
+    <h2>إلغاء الوصول وإدارة الأذونات</h2>
+    <p>
+      يمكنك إلغاء وصول نظام اللجان إلى حسابك في Google في أي وقت من خلال صفحة إدارة الحساب:
+      <a href="https://myaccount.google.com/permissions" target="_blank" rel="noopener">myaccount.google.com/permissions</a>.
+      بعد الإلغاء، لا يعود التطبيق قادرًا على الوصول إلى Google Drive حتى تعيد منحه الأذونات.
+    </p>
+
+    <h2>الاحتفاظ بالبيانات</h2>
+    <p>
+      نحتفظ فقط بالبيانات الضرورية لتشغيل الميزات (مثل روابط المستندات) وطالما كان حسابك فعّالًا.
+      يمكن حذف الروابط من داخل النظام أو بطلب من المستخدم إلى مسؤول النظام.
     </p>
 
     <h2>الأمان</h2>
-    <ul>
-      <li>نستخدم اتصال HTTPS وتدابير أمنية معقولة لحماية البيانات المخزنة.</li>
-      <li>لا نخزّن محتوى الملفات؛ نحتفظ بروابط وبيانات وصفية فقط.</li>
-      <li>نطبّق مبدأ أقل قدر من الامتيازات في الأذونات المطلوبة.</li>
-    </ul>
-
-    <h2>الاحتفاظ بالبيانات والحذف</h2>
     <p>
-      نحتفظ بالبيانات طالما كان حسابك نشطًا ولغرض تشغيل النظام. يمكنك طلب حذف روابطك/بياناتك من خلال مراسلتنا،
-      كما يمكنك حذف الروابط من داخل النظام متى شئت.
+      نستخدم اتصالًا مشفّرًا عبر HTTPS. بالنسبة لرموز التفويض (Tokens) الخاصة بـ Google، تتم معالجتها آنيًا لأغراض
+      اختيار/رفع الملفات ولا نقوم بتخزينها أكثر من اللازم لتقديم الوظيفة المطلوبة.
     </p>
 
-    <h2>إدارة الأذونات وإلغاء الوصول</h2>
-    <ul>
-      <li>يمكنك إلغاء وصول التطبيق من صفحة <a href="https://myaccount.google.com/permissions" target="_blank" rel="noopener">أذونات حساب Google</a>.</li>
-      <li>بعد الإلغاء، لن نتمكن من الوصول إلى ملفاتك على Google ولن نتمكن من تحديث الروابط تلقائيًا.</li>
-    </ul>
-
-    <h2>ملفات تعريف الارتباط (Cookies) والتخزين المحلي</h2>
-    <p>قد نستخدم الكوكيز/التخزين المحلي لأغراض الجلسة، وتحسين التجربة، وتذكّر تفضيلاتك. يمكنك التحكم بها عبر إعدادات المتصفح.</p>
-
-    <h2>حقوقك</h2>
-    <ul>
-      <li>الوصول إلى بياناتك، تصحيحها، حذفها، أو الاعتراض على معالجتها عندما يكون ذلك ممكنًا.</li>
-      <li>للاستفسار أو الطلبات، تواصل معنا عبر البريد أدناه.</li>
-    </ul>
-
-    <h2>التغييرات على هذه السياسة</h2>
-    <p>قد نحدّث هذه السياسة من وقت لآخر. سننشر أي تغييرات جوهرية على هذه الصفحة مع تعديل تاريخ “آخر تحديث”.</p>
-
-    <h2>اتصل بنا</h2>
-    <p>بريد الدعم: <a href="mailto:⟨support@example.com⟩">⟨support@example.com⟩</a></p>
-
-    <hr>
-    <p class="muted" style="font-size:.92rem">
-      يتطلب نشر التطبيق على وضع الإنتاج (Production) تزويد رابط سياسة خصوصية صالح على نطاق مصادق عليه، وفق اشتراطات جوجل لعملية التحقق (OAuth Verification). 
-      راجع: <a href="https://support.google.com/cloud/answer/10311615" target="_blank" rel="noopener">متطلبات شاشة موافقة OAuth</a>.
+    <h2>مشاركة البيانات</h2>
+    <p>
+      لا نشارك بياناتك مع أطراف ثالثة إلا حيث يلزم لتقديم الخدمة (مثل Google APIs عند اختيار الملفات)، أو حيث يتطلب القانون ذلك.
     </p>
+
+    <h2>جهة الاتصال</h2>
+    <p>
+      للاستفسار أو طلب حذف البيانات، تواصل معنا: 
+      <a href="mailto:laithobidat85@gmail.com">laithobidat85@gmail.com</a>
+    </p>
+
+    <p class="muted" style="margin-top:32px">آخر تحديث: سبتمبر 2025</p>
   </main>
 </body>
 </html>
