--- a/public/test.html
+++ b/public/test.html
@@ -270,8 +270,8 @@
     const apiFetch=(path,opts={})=>fetch(`${API_BASE}${path}`,{credentials:'include',...opts});
 
     /* ====== بيانات Google ====== */
-    const GOOGLE_CLIENT_ID = 'YOUR_GOOGLE_CLIENT_ID';
-    const GOOGLE_API_KEY   = 'YOUR_GOOGLE_API_KEY';
+    const GOOGLE_CLIENT_ID = '656975767411-lu47r57vrfmhrplrd11rdgbm34cqofsn.apps.googleusercontent.com';
+    const GOOGLE_API_KEY   = 'AIzaSyAaUEq7_7nbhj7Ch-7X0OWKyREUK8bH_EY';
     // ▼ تم التبديل إلى قراءة فقط
     const DRIVE_SCOPE      = 'https://www.googleapis.com/auth/drive.readonly';
     let googleAccessToken  = null;
